infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: olamide/posts
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
