infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    app: ingress-srv
  annotations:
    spec.ingressClassName: nginx
spec:
  rules:
  - host: posts.com
    http:
      paths:
        - pathType: Prefix
          path: /api/posts
          backend:
            service:
              name: posts-clusterip-srv
              port: 
                number: 8000
